Support normal and custom web pairing codes
